--- a/forgot-password.html
+++ b/forgot-password.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <style>
         body {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background-color: var(--zd-bg-light);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -21,27 +21,46 @@
         .forgot-card {
             max-width: 420px;
             margin: 0 auto;
-            border-radius: 1rem;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            border-radius: var(--zd-radius-lg);
+            box-shadow: var(--zd-shadow-xl);
+            border: 1px solid var(--zd-border);
+            overflow: hidden;
+            background: #fff;
         }
 
         .forgot-header {
-            background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%);
-            color: #fff;
-            padding: 2rem;
-            border-radius: 1rem 1rem 0 0;
+            padding: 3rem 2rem 1.5rem;
             text-align: center;
+        }
+
+        .forgot-header .icon-box {
+            width: 64px;
+            height: 64px;
+            background: rgba(245, 165, 36, 0.1);
+            color: var(--zd-warning);
+            border-radius: var(--zd-radius);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 1.5rem;
+            font-size: 1.75rem;
         }
 
         .forgot-header h1 {
             font-size: 1.5rem;
-            margin-bottom: 0.25rem;
+            font-weight: 700;
+            color: var(--zd-text);
+            margin-bottom: 0.5rem;
         }
 
         .forgot-body {
-            padding: 2rem;
-            background: #fff;
-            border-radius: 0 0 1rem 1rem;
+            padding: 0 2.5rem 3rem;
+        }
+
+        .form-label {
+            font-weight: 500;
+            font-size: 0.85rem;
+            color: var(--zd-text);
         }
     </style>
 </head>
@@ -50,9 +69,11 @@
     <div class="container">
         <div class="card forgot-card">
             <div class="forgot-header">
-                <i class="ph-bold ph-key fs-1 mb-2"></i>
+                <div class="icon-box">
+                    <i class="ph-bold ph-key"></i>
+                </div>
                 <h1>Forgot Password?</h1>
-                <p class="mb-0 opacity-75">Enter your email to reset</p>
+                <p class="mb-0 text-muted">Enter your email to reset</p>
             </div>
             <div class="forgot-body">
                 <p class="text-muted mb-4">Enter your email address and we'll send you a link to reset your password.
