--- a/icons.html
+++ b/icons.html
@@ -41,7 +41,9 @@
     </style>
 </head>
 
-<body class="zd-nav-fixed">
+<body class='zd-nav-fixed'>
+  <div id='mpa-loader'></div>
+  
     <header>
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <div class="navbar-brand ps-3 d-flex align-items-center"><img src="assets/img/logo.png" alt="logo"
