--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
   <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
   <link rel="stylesheet" href="assets/css/phosphor/regular/style.css" />
   <link rel="stylesheet" href="assets/css/phosphor/fill/style.css" />
-
 </head>
 
-<body class="zd-nav-fixed">
+<body class='zd-nav-fixed'>
+  <div id='mpa-loader'></div>
+  
   <header>
     <nav class="zd-topnav navbar navbar-expand navbar-light">
       <div class="navbar-brand ps-3 d-flex align-items-center">
