--- a/tables-datatables.html
+++ b/tables-datatables.html
@@ -14,7 +14,9 @@
     <link href="assets/vendor/prism/prism-light.min.css" rel="stylesheet" />
 </head>
 
-<body class="zd-nav-fixed">
+<body class='zd-nav-fixed'>
+  <div id='mpa-loader'></div>
+  
     <header>
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <div class="navbar-brand ps-3 d-flex align-items-center">
