--- a/cards.html
+++ b/cards.html
@@ -40,10 +40,11 @@
 
     <!-- Prism Syntax Highlighting -->
     <link href="assets/vendor/prism/prism-light.min.css" rel="stylesheet" />
-
 </head>
 
-<body class="zd-nav-fixed">
+<body class='zd-nav-fixed'>
+  <div id='mpa-loader'></div>
+  
     <header>
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <div class="navbar-brand ps-3 d-flex align-items-center">
