--- a/register.html
+++ b/register.html
@@ -12,36 +12,55 @@
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <style>
         body {
-            background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);
+            background-color: var(--zd-bg-light);
             min-height: 100vh;
             display: flex;
             align-items: center;
         }
 
         .register-card {
-            max-width: 450px;
-            margin: 0 auto;
-            border-radius: 1rem;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            max-width: 480px;
+            margin: 2rem auto;
+            border-radius: var(--zd-radius-lg);
+            box-shadow: var(--zd-shadow-xl);
+            border: 1px solid var(--zd-border);
+            overflow: hidden;
+            background: #fff;
         }
 
         .register-header {
-            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
-            color: #fff;
-            padding: 2rem;
-            border-radius: 1rem 1rem 0 0;
+            padding: 3rem 2rem 1.5rem;
             text-align: center;
+        }
+
+        .register-header .icon-box {
+            width: 64px;
+            height: 64px;
+            background: rgba(23, 201, 100, 0.1);
+            color: var(--zd-success);
+            border-radius: var(--zd-radius);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 1.5rem;
+            font-size: 1.75rem;
         }
 
         .register-header h1 {
             font-size: 1.5rem;
-            margin-bottom: 0.25rem;
+            font-weight: 700;
+            color: var(--zd-text);
+            margin-bottom: 0.5rem;
         }
 
         .register-body {
-            padding: 2rem;
-            background: #fff;
-            border-radius: 0 0 1rem 1rem;
+            padding: 0 2.5rem 3rem;
+        }
+
+        .form-label {
+            font-weight: 500;
+            font-size: 0.85rem;
+            color: var(--zd-text);
         }
     </style>
 </head>
@@ -50,9 +69,11 @@
     <div class="container">
         <div class="card register-card">
             <div class="register-header">
-                <i class="ph-bold ph-user-plus fs-1 mb-2"></i>
+                <div class="icon-box">
+                    <i class="ph-bold ph-user-plus"></i>
+                </div>
                 <h1>Create Account</h1>
-                <p class="mb-0 opacity-75">Fill in the form to get started</p>
+                <p class="mb-0 text-muted">Join us today to get started</p>
             </div>
             <div class="register-body">
                 <form>
