--- a/404.html
+++ b/404.html
@@ -8,7 +8,12 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/styles.css" rel="stylesheet" />`r`n    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/animate.min.css" />
+    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+    <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
+    <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <style>
         body {
@@ -56,7 +61,11 @@
             <i class="ph-bold ph-house me-2"></i>Back to Dashboard
         </a>
     </div>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>`r`n  <script src="assets/js/sweetalert2.all.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/sweetalert2.all.min.js"></script>
+    <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+    <script src="assets/js/simplebar.min.js"></script>
 </body>
 
 </html>
