--- a/buttons.html
+++ b/buttons.html
@@ -32,7 +32,7 @@
 
     <!-- Styles -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/styles.css" rel="stylesheet" />`r`n    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+    <link href="assets/css/styles.css" rel="stylesheet" />`r`n    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />`r`n    <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />`r`n    <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />`r`n    <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <link rel="stylesheet" href="assets/css/phosphor/regular/style.css" />
     <link rel="stylesheet" href="assets/css/phosphor/fill/style.css" />
@@ -74,14 +74,22 @@
     <div id="layoutSidenav">
         <aside id="layoutSidenav_nav">
             <nav class="zd-sidenav accordion zd-sidenav-light" id="sidenavAccordion">
-                <div class="zd-sidenav-menu">
+                <div class="zd-sidenav-menu" data-simplebar>
                     <div class="nav">
                         <h2 class="zd-sidenav-menu-heading">Menu</h2>
 
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#dashboardCollapse">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-house"></i></div>
                             <span>Dashboard</span>
+                            <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
                         </a>
+                        <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
+                            <nav class="zd-sidenav-menu-nested nav">
+                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="dashboard-crm.html">CRM</a>
+                                <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
+                            </nav>
+                        </div>
 
                         <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse"
                             aria-expanded="true">
@@ -297,7 +305,7 @@
         </main>
     </div>
 
-    <script src="assets/js/bootstrap.bundle.min.js"></script>`r`n  <script src="assets/js/sweetalert2.all.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>`r`n  <script src="assets/js/sweetalert2.all.min.js"></script>`r`n  <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>`r`n  <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>`r`n  <script src="assets/js/simplebar.min.js"></script>
     <!-- Prism JS -->
     <script src="assets/vendor/prism/prism.min.js"></script>
     <script src="assets/js/scripts.js"></script>
