--- a/forms-basic.html
+++ b/forms-basic.html
@@ -8,14 +8,20 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/styles.css" rel="stylesheet" />`r`n    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+    <link href="assets/css/styles.css" rel="stylesheet" />`r`n
+    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n
+    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />`r`n
+    <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />`r`n
+    <link rel="stylesheet" href="assets/css/select2.min.css" />
+    <link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />`r`n
+    <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <link href="assets/vendor/prism/prism-light.min.css" rel="stylesheet" />
 </head>
 
 <body class='zd-nav-fixed'>
-  <div id='mpa-loader'></div>
-  
+    <div id='mpa-loader'></div>
+
     <header>
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <div class="navbar-brand ps-3 d-flex align-items-center">
@@ -37,12 +43,22 @@
     <div id="layoutSidenav">
         <aside id="layoutSidenav_nav">
             <nav class="zd-sidenav accordion zd-sidenav-light" id="sidenavAccordion">
-                <div class="zd-sidenav-menu">
+                <div class="zd-sidenav-menu" data-simplebar>
                     <div class="nav">
                         <h2 class="zd-sidenav-menu-heading">Menu</h2>
-                        <a class="nav-link" href="index.html">
-                            <div class="zd-nav-link-icon"><i class="ph-bold ph-house"></i></div><span>Dashboard</span>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#dashboardCollapse">
+                            <div class="zd-nav-link-icon"><i class="ph-bold ph-house"></i></div>
+                            <span>Dashboard</span>
+                            <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
                         </a>
+                        <div class="collapse" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
+                            <nav class="zd-sidenav-menu-nested nav">
+                                <a class="nav-link" href="index.html">Analytics</a>
+                                <a class="nav-link" href="dashboard-crm.html">CRM</a>
+                                <a class="nav-link" href="dashboard-ecommerce.html">Ecommerce</a>
+                            </nav>
+                        </div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#componentsCollapse">
                             <div class="zd-nav-link-icon"><i class="ph-bold ph-squares-four"></i></div>
@@ -234,13 +250,94 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-12">
+                        <div class="card animate__animated animate__fadeIn mb-4">
+                            <div class="card-header fw-semibold">Advanced Date Pickers (Tempus Dominus)</div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-4 mb-3">
+                                        <label class="form-label">Basic Date</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i class="ph-bold ph-calendar"></i></span>
+                                            <input type="text" class="form-control" id="td-date"
+                                                placeholder="Select date">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 mb-3">
+                                        <label class="form-label">Date & Time</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i class="ph-bold ph-clock"></i></span>
+                                            <input type="text" class="form-control" id="td-datetime"
+                                                placeholder="Select date time">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 mb-3">
+                                        <label class="form-label">Range Selection</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text"><i
+                                                    class="ph-bold ph-calendar-range"></i></span>
+                                            <input type="text" class="form-control" id="td-range"
+                                                placeholder="Select range">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="code-wrapper">
+                                    <div class="code-header">
+                                        <button class="btn btn-sm btn-outline-primary btn-toggle-code"><i
+                                                class="ph-bold ph-code me-1"></i> Show Code</button>
+                                        <button class="btn btn-sm btn-outline-secondary btn-copy-code"><i
+                                                class="ph-bold ph-copy me-1"></i> Copy</button>
+                                    </div>
+                                    <pre class="code-snippet d-none"><code class="language-javascript">// Basic Date
+new tempusDominus.TempusDominus(document.getElementById('td-date'), {
+    display: { components: { clock: false } }
+});
+
+// Date & Time
+new tempusDominus.TempusDominus(document.getElementById('td-datetime'), {
+    display: { theme: 'light' }
+});
+
+// Range Selection
+new tempusDominus.TempusDominus(document.getElementById('td-range'), {
+    display: { components: { clock: false } }
+});</code></pre>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
     </div>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>`r`n  <script src="assets/js/sweetalert2.all.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/sweetalert2.all.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/tempus-dominus.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/select2.min.js"></script>`r`n
+    <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/vendor/prism/prism.min.js"></script>
     <script src="assets/js/scripts.js"></script>
+    <script>
+        $(document).ready(function () {
+            if (document.getElementById('td-date')) {
+                new tempusDominus.TempusDominus(document.getElementById('td-date'), {
+                    display: { components: { clock: false }, theme: 'light' }
+                });
+            }
+            if (document.getElementById('td-datetime')) {
+                new tempusDominus.TempusDominus(document.getElementById('td-datetime'), {
+                    display: { theme: 'light' }
+                });
+            }
+            if (document.getElementById('td-range')) {
+                new tempusDominus.TempusDominus(document.getElementById('td-range'), {
+                    display: { components: { clock: false }, theme: 'light' }
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
