--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>zepdash-admin</title>
+  <title>Analytics Dash - zepdash-admin</title>
 
   <!-- Meta SEO -->
   <meta name="description" content="zepdash-admin is a modern Bootstrap-based admin dashboard" />
@@ -32,7 +32,12 @@
 
   <!-- Styles -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="assets/css/styles.css" rel="stylesheet" />`r`n    <link rel="stylesheet" href="assets/css/animate.min.css" />`r`n    <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+  <link href="assets/css/styles.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/animate.min.css" />
+  <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+  <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
+  <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+  <link rel="stylesheet" href="assets/css/simplebar.min.css" />
   <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
   <link rel="stylesheet" href="assets/css/phosphor/regular/style.css" />
   <link rel="stylesheet" href="assets/css/phosphor/fill/style.css" />
@@ -40,7 +45,7 @@
 
 <body class='zd-nav-fixed'>
   <div id='mpa-loader'></div>
-  
+
   <header>
     <nav class="zd-topnav navbar navbar-expand navbar-light">
       <div class="navbar-brand ps-3 d-flex align-items-center">
@@ -71,14 +76,23 @@
   <div id="layoutSidenav">
     <aside id="layoutSidenav_nav">
       <nav class="zd-sidenav accordion zd-sidenav-light" id="sidenavAccordion">
-        <div class="zd-sidenav-menu">
+        <div class="zd-sidenav-menu" data-simplebar>
           <div class="nav">
             <h2 class="zd-sidenav-menu-heading">Menu</h2>
 
-            <a class="nav-link active" href="index.html">
+            <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#dashboardCollapse"
+              aria-expanded="true">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-house"></i></div>
               <span>Dashboard</span>
+              <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
             </a>
+            <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
+                            <nav class="zd-sidenav-menu-nested nav">
+                                <a class="nav-link active" href="index.html">Analytics</a>
+                                <a class="nav-link " href="dashboard-crm.html">CRM</a>
+                                <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
+                            </nav>
+                        </div>
 
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-squares-four"></i></div>
@@ -170,25 +184,182 @@
     </aside>
 
     <main id="layoutSidenav_content">
-      <section class="container-fluid px-4">
-        <header class="my-4">
-          <h1 class="h4 mb-0">Dashboard</h1>
-          <p class="text-muted">Welcome to zepdash-admin</p>
+      <section class="container-fluid px-4 pb-5">
+        <header class="my-4 d-flex justify-content-between align-items-center">
+          <div>
+            <h1 class="h4 mb-0 fw-bold">Dashboard Analytics</h1>
+            <p class="text-muted small mb-0">Welcome back, here's what's happening today.</p>
+          </div>
+          <div class="d-flex gap-2">
+            <button class="btn btn-sm btn-white border shadow-sm px-3"><i class="ph-bold ph-calendar-blank me-1"></i>
+              Today</button>
+            <button class="btn btn-sm btn-primary shadow-sm px-3"><i class="ph-bold ph-download-simple me-1"></i>
+              Export</button>
+          </div>
         </header>
 
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="card animate__animated animate__fadeIn mb-4">
+        <!-- Stats Row -->
+        <div class="row mb-2">
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow-sm stats-card animate__animated animate__fadeIn">
+              <div class="stats-icon icon-blue">
+                <i class="ph-bold ph-currency-dollar"></i>
+              </div>
+              <div class="stats-info">
+                <span>Total Revenue</span>
+                <h3>$24,560 <span class="trend-indicator trend-up"><i class="ph-bold ph-trend-up"></i> 12%</span></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow-sm stats-card animate__animated animate__fadeIn">
+              <div class="stats-icon icon-success">
+                <i class="ph-bold ph-shopping-cart"></i>
+              </div>
+              <div class="stats-info">
+                <span>Total Sales</span>
+                <h3>1,204 <span class="trend-indicator trend-up"><i class="ph-bold ph-trend-up"></i> 8%</span></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow-sm stats-card animate__animated animate__fadeIn">
+              <div class="stats-icon icon-warning">
+                <i class="ph-bold ph-users"></i>
+              </div>
+              <div class="stats-info">
+                <span>New Customers</span>
+                <h3>456 <span class="trend-indicator trend-down"><i class="ph-bold ph-trend-down"></i> 3%</span></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-0 shadow-sm stats-card animate__animated animate__fadeIn">
+              <div class="stats-icon icon-danger">
+                <i class="ph-bold ph-eye"></i>
+              </div>
+              <div class="stats-info">
+                <span>Site Visits</span>
+                <h3>12.4k <span class="trend-indicator trend-up"><i class="ph-bold ph-trend-up"></i> 24%</span></h3>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row align-items-stretch">
+          <div class="col-lg-8 mb-4">
+            <div class="card border-0 shadow-sm h-100 animate__animated animate__fadeIn">
+              <div class="card-header bg-transparent border-0 pt-4 px-4 fw-bold">Revenue Growth</div>
               <div class="card-body">
-                <div id="barChart" class="chart-container"></div>
+                <div id="barChart" class="chart-container" style="height: 320px;"></div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4">
-            <div class="card animate__animated animate__fadeIn mb-4">
+          <div class="col-lg-4 mb-4">
+            <div class="card border-0 shadow-sm h-100 animate__animated animate__fadeIn">
+              <div class="card-header bg-transparent border-0 pt-4 px-4 fw-bold">Traffic Source</div>
               <div class="card-body">
-                <div id="pieChart" class="chart-container"></div>
+                <div id="pieChart" class="chart-container" style="height: 320px;"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Recent Transactions -->
+        <div class="row">
+          <div class="col-12">
+            <div class="card border-0 shadow-sm animate__animated animate__fadeIn">
+              <div
+                class="card-header d-flex justify-content-between align-items-center bg-transparent border-0 pt-4 px-4">
+                <span class="fw-bold">Recent Transactions</span>
+                <a href="tables-basic.html" class="btn btn-sm btn-light border px-3">View All</a>
+              </div>
+              <div class="card-body px-0 pb-0">
+                <div class="table-responsive">
+                  <table class="table table-hover align-middle mb-0">
+                    <thead style="background: #f8fafc;">
+                      <tr>
+                        <th class="ps-4 border-0">Order ID</th>
+                        <th class="border-0">Customer</th>
+                        <th class="border-0">Amount</th>
+                        <th class="border-0">Date</th>
+                        <th class="border-0">Status</th>
+                        <th class="pe-4 text-end border-0">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="ps-4 fw-medium text-primary">#ORD-001</td>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div
+                              class="avatar-sm me-2 bg-light rounded-circle d-flex align-items-center justify-content-center"
+                              style="width: 32px; height: 32px; font-size: 0.8rem; font-weight: 600;">RF</div>
+                            Robert Fox
+                          </div>
+                        </td>
+                        <td>$124.00</td>
+                        <td>Mar 12, 2024</td>
+                        <td><span class="badge bg-success-subtle text-success border-0 px-2 py-1">Completed</span></td>
+                        <td class="pe-4 text-end">
+                          <button class="btn btn-sm btn-light border px-2">Details</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="ps-4 fw-medium text-primary">#ORD-002</td>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div
+                              class="avatar-sm me-2 bg-light rounded-circle d-flex align-items-center justify-content-center"
+                              style="width: 32px; height: 32px; font-size: 0.8rem; font-weight: 600;">JC</div>
+                            Jane Cooper
+                          </div>
+                        </td>
+                        <td>$89.00</td>
+                        <td>Mar 11, 2024</td>
+                        <td><span class="badge bg-warning-subtle text-warning border-0 px-2 py-1">Pending</span></td>
+                        <td class="pe-4 text-end">
+                          <button class="btn btn-sm btn-light border px-2">Details</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="ps-4 fw-medium text-primary">#ORD-003</td>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div
+                              class="avatar-sm me-2 bg-light rounded-circle d-flex align-items-center justify-content-center"
+                              style="width: 32px; height: 32px; font-size: 0.8rem; font-weight: 600;">GH</div>
+                            Guy Hawkins
+                          </div>
+                        </td>
+                        <td>$256.00</td>
+                        <td>Mar 10, 2024</td>
+                        <td><span class="badge bg-success-subtle text-success border-0 px-2 py-1">Completed</span></td>
+                        <td class="pe-4 text-end">
+                          <button class="btn btn-sm btn-light border px-2">Details</button>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="ps-4 fw-medium text-primary">#ORD-004</td>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <div
+                              class="avatar-sm me-2 bg-light rounded-circle d-flex align-items-center justify-content-center"
+                              style="width: 32px; height: 32px; font-size: 0.8rem; font-weight: 600;">BC</div>
+                            Bessie Cooper
+                          </div>
+                        </td>
+                        <td>$45.00</td>
+                        <td>Mar 10, 2024</td>
+                        <td><span class="badge bg-danger-subtle text-danger border-0 px-2 py-1">Cancelled</span></td>
+                        <td class="pe-4 text-end">
+                          <button class="btn btn-sm btn-light border px-2">Details</button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -197,7 +368,11 @@
     </main>
   </div>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>`r`n  <script src="assets/js/sweetalert2.all.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/sweetalert2.all.min.js"></script>
+  <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+  <script src="assets/js/simplebar.min.js"></script>
   <script src="assets/js/scripts.js"></script>
   <script src="assets/js/echarts.min.js"></script>
   <!-- Dashboard specific charts -->
