--- a/dashboard-crm.html
+++ b/dashboard-crm.html
@@ -26,7 +26,8 @@
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
     <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
-    <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="assets/css/select2.min.css" />
+    <link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
     <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
     <link rel="stylesheet" href="assets/css/phosphor/regular/style.css" />
@@ -370,13 +371,15 @@
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/sweetalert2.all.min.js"></script>
-    <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
-    <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/tempus-dominus.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/select2.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="assets/js/echarts.min.js"></script>
     <!-- Dashboard specific charts -->
-    <script src="assets/js/dashboard-charts.js"></script>
+    <script src="assets/js/pages/dashboard-crm.js"></script>
 
 </body>
 
