--- a/forgot-password.html
+++ b/forgot-password.html
@@ -12,62 +12,11 @@
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
     <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
-    <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="assets/css/select2.min.css" />
+    <link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
     <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
-    <style>
-        body {
-            background-color: var(--zd-bg-light);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-        }
-
-        .forgot-card {
-            max-width: 420px;
-            margin: 0 auto;
-            border-radius: var(--zd-radius-lg);
-            box-shadow: var(--zd-shadow-xl);
-            border: 1px solid var(--zd-border);
-            overflow: hidden;
-            background: #fff;
-        }
-
-        .forgot-header {
-            padding: 3rem 2rem 1.5rem;
-            text-align: center;
-        }
-
-        .forgot-header .icon-box {
-            width: 64px;
-            height: 64px;
-            background: rgba(245, 165, 36, 0.1);
-            color: var(--zd-warning);
-            border-radius: var(--zd-radius);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 1.5rem;
-            font-size: 1.75rem;
-        }
-
-        .forgot-header h1 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: var(--zd-text);
-            margin-bottom: 0.5rem;
-        }
-
-        .forgot-body {
-            padding: 0 2.5rem 3rem;
-        }
-
-        .form-label {
-            font-weight: 500;
-            font-size: 0.85rem;
-            color: var(--zd-text);
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/pages/forgot-password.css" />
 </head>
 
 <body>
@@ -100,9 +49,12 @@
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/sweetalert2.all.min.js"></script>
-    <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
-    <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/tempus-dominus.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/select2.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
+    <script src="assets/js/pages/forgot-password.js"></script>
 </body>
 
 </html>
