--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   <link rel="stylesheet" href="assets/css/animate.min.css" />
   <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
   <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
-  <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+  <link rel="stylesheet" href="assets/css/select2.min.css" />
+  <link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
   <link rel="stylesheet" href="assets/css/simplebar.min.css" />
   <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
   <link rel="stylesheet" href="assets/css/phosphor/regular/style.css" />
@@ -87,12 +88,12 @@
               <div class="zd-sidenav-collapse-arrow"><i class="ph-bold ph-caret-down"></i></div>
             </a>
             <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
-                            <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link active" href="index.html">Analytics</a>
-                                <a class="nav-link " href="dashboard-crm.html">CRM</a>
-                                <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
-                            </nav>
-                        </div>
+              <nav class="zd-sidenav-menu-nested nav">
+                <a class="nav-link active" href="index.html">Analytics</a>
+                <a class="nav-link " href="dashboard-crm.html">CRM</a>
+                <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
+              </nav>
+            </div>
 
             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#componentsCollapse">
               <div class="zd-nav-link-icon"><i class="ph-bold ph-squares-four"></i></div>
@@ -370,13 +371,15 @@
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/sweetalert2.all.min.js"></script>
-  <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
-  <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/tempus-dominus.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/select2.min.js"></script>
   <script src="assets/js/simplebar.min.js"></script>
   <script src="assets/js/scripts.js"></script>
   <script src="assets/js/echarts.min.js"></script>
   <!-- Dashboard specific charts -->
-  <script src="assets/js/dashboard-charts.js"></script>
+  <script src="assets/js/pages/dashboard-analytics.js"></script>
 
 </body>
 
