--- a/500.html
+++ b/500.html
@@ -12,49 +12,16 @@
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
     <link rel="stylesheet" href="assets/css/tempus-dominus.min.css" />
-    <link rel="stylesheet" href="assets/css/select2.min.css" /><link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="assets/css/select2.min.css" />
+    <link rel="stylesheet" href="assets/css/select2-bootstrap-5-theme.min.css" />
     <link rel="stylesheet" href="assets/css/simplebar.min.css" />
     <link rel="stylesheet" href="assets/css/phosphor/bold/style.css" />
-    <style>
-        body {
-            background-color: var(--zd-bg-light);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            color: var(--zd-text);
-        }
-
-        .error-code {
-            font-size: 10rem;
-            font-weight: 800;
-            background: linear-gradient(135deg, #ef4444, #f59e0b);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            line-height: 1;
-            margin-bottom: 1rem;
-            filter: drop-shadow(0 10px 20px rgba(239, 68, 68, 0.2));
-        }
-
-        .error-title {
-            font-size: 2.25rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            color: var(--zd-text);
-        }
-
-        .error-text {
-            color: var(--zd-text-muted);
-            max-width: 450px;
-            margin: 0 auto 2.5rem;
-            font-size: 1.1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/pages/error.css" />
 </head>
 
 <body>
     <div class="container text-center">
-        <div class="error-code">500</div>
+        <div class="error-code error-500">500</div>
         <h1 class="error-title">Server Error</h1>
         <p class="error-text">Something went wrong on our end. Please try again later or contact support.</p>
         <a href="index.html" class="btn btn-danger btn-lg">
@@ -63,8 +30,10 @@
     </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/sweetalert2.all.min.js"></script>
-    <script src="assets/js/popper.min.js"></script><script src="assets/js/tempus-dominus.min.js"></script>
-    <script src="assets/js/jquery.min.js"></script><script src="assets/js/select2.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/tempus-dominus.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/select2.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
 </body>
 
