--- a/demo/dashboard-analytics.html
+++ b/demo/dashboard-analytics.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Analytics Dash - zepdash-admin</title>
+  <title>ZepDash - Analytic Dash</title>
 
   <!-- Meta SEO -->
   <meta name="description" content="zepdash-admin is a modern Bootstrap-based admin dashboard" />
