--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zepdash - Free Admin Dashboard Template</title>
+    <title>ZepDash - Free Admin Dashboard Template</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <h1 class="hero-title">Zepdash - Modern Admin Dashboard</h1>
+                    <h1 class="hero-title">ZepDash - Modern Admin Dashboard</h1>
                     <p class="hero-subtitle">
                         A high-performance admin template built with Bootstrap 5.
                         The perfect solution for your CRM, E-commerce, and Analytics systems.
@@ -127,7 +127,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-11">
                     <div class="hero-image-container">
-                        <img src="assets/images/banner.png" alt="zepdash" class="hero-image rounded shadow">
+                        <img src="assets/images/banner.png" alt="ZepDash" class="hero-image rounded shadow">
                     </div>
                 </div>
             </div>
@@ -135,8 +135,7 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div class="button-group">
-                        <a href="demo/dashboard-analytics.html" class="btn btn-premium btn-primary-zd">View Live
-                            Demo</a>
+                        <a href="demo/dashboard-analytics.html" class="btn btn-premium btn-primary-zd">Demo</a>
                         <a href="docs/index.html" class="btn btn-premium btn-outline-zd">Documentation</a>
                     </div>
                 </div>
