--- a/demo/500.html
+++ b/demo/500.html
@@ -1,34 +1,46 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>500 - Server Error</title>
-    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <!-- Meta SEO -->
+  <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
+  <meta name="author" content="ZepDash" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta property="og:type" content="website" />
+  <title>ZepDash - 500 Error</title>
+  <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/plugins/nprogress/nprogress.min.css" />
   <link href="../assets/styles/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../assets/plugins/animate/animate.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/tempus-dominus/css/tempus-dominus.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/select2/css/select2.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/select2/css/select2-bootstrap-5-theme.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/simplebar/simplebar.min.css" />
-    <link rel="stylesheet" href="../assets/plugins/phosphor/bold/style.css" />
-    <link rel="stylesheet" href="../assets/styles/pages/error.css" />
+  <link rel="stylesheet" href="../assets/plugins/animate/animate.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/tempus-dominus/css/tempus-dominus.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/select2/css/select2.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/select2/css/select2-bootstrap-5-theme.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/simplebar/simplebar.min.css" />
+  <link rel="stylesheet" href="../assets/plugins/phosphor/bold/style.css" />
+  <link rel="stylesheet" href="../assets/styles/pages/error.css" />
 </head>
 
 <body>
-    <div class="container text-center">
-        <div class="error-code error-500">500</div>
-        <h1 class="error-title">Server Error</h1>
-        <p class="error-text">Something went wrong on our end. Please try again later or contact support.</p>
-        <a href="dashboard-analytics.html" class="btn btn-danger btn-lg">
-            <i class="ph-bold ph-house me-2"></i>Back to Dashboard
-        </a>
-    </div>
+  <div class="container text-center">
+    <div class="error-code error-500">500</div>
+    <h1 class="error-title">Server Error</h1>
+    <p class="error-text">Something went wrong on our end. Please try again later or contact support.</p>
+    <a href="index.html" class="btn btn-danger btn-lg">
+      <i class="ph-bold ph-house me-2"></i>Back to Dashboard
+    </a>
+  </div>
   <script src="../assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
   <script src="../assets/plugins/popper/popper.min.js"></script>
@@ -39,3 +51,7 @@
 </body>
 
 </html>
+
+
+
+
