--- a/demo/forgot-password.html
+++ b/demo/forgot-password.html
@@ -1,15 +1,27 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Forgot Password - zepdash-admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Meta SEO -->
+    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="ZepDash" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:type" content="website" />
+    <title>ZepDash - Forgot Password</title>
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/plugins/nprogress/nprogress.min.css" />
-  <link href="../assets/styles/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/plugins/nprogress/nprogress.min.css" />
+    <link href="../assets/styles/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="../assets/plugins/animate/animate.min.css" />
     <link rel="stylesheet" href="../assets/plugins/sweetalert2/sweetalert2.min.css" />
     <link rel="stylesheet" href="../assets/plugins/tempus-dominus/css/tempus-dominus.min.css" />
@@ -48,14 +60,18 @@
             </div>
         </div>
     </div>
-  <script src="../assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-  <script src="../assets/plugins/popper/popper.min.js"></script>
-  <script src="../assets/plugins/tempus-dominus/js/tempus-dominus.min.js"></script>
-  <script src="../assets/plugins/jquery/jquery.min.js"></script>
-  <script src="../assets/plugins/select2/js/select2.min.js"></script>
-  <script src="../assets/plugins/simplebar/simplebar.min.js"></script>
-  <script src="../assets/scripts/pages/forgot-password.js"></script>
+    <script src="../assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/plugins/sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="../assets/plugins/popper/popper.min.js"></script>
+    <script src="../assets/plugins/tempus-dominus/js/tempus-dominus.min.js"></script>
+    <script src="../assets/plugins/jquery/jquery.min.js"></script>
+    <script src="../assets/plugins/select2/js/select2.min.js"></script>
+    <script src="../assets/plugins/simplebar/simplebar.min.js"></script>
+    <script src="../assets/scripts/pages/forgot-password.js"></script>
 </body>
 
 </html>
+
+
+
+
