--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZepDash - Free Admin Dashboard Template</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Meta SEO -->
+    <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
+    <meta name="author" content="ZepDash" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+    <meta property="og:type" content="website" />
+    <title>ZepDash - Free Bootstrap 5 Admin Dashboard</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,103 +27,7 @@
 
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-    <style>
-        :root {
-            --zd-primary: #006fee;
-            --zd-secondary: #71717a;
-            --zd-text: #11181c;
-            --zd-accent: #3e94ff;
-        }
-
-        body {
-            font-family: 'Outfit', sans-serif;
-            color: var(--zd-text);
-            background-color: #fcfcfc;
-            margin: 0;
-        }
-
-        /* Hero Section */
-        .hero-section {
-            padding: 60px 0 60px;
-            background: radial-gradient(circle at center, rgba(216, 241, 230, 0.4) 0%, rgba(255, 255, 255, 1) 100%);
-            text-align: center;
-        }
-
-        .hero-title {
-            font-size: 30px;
-            font-weight: 800;
-            margin-bottom: 1.5rem;
-            background: linear-gradient(135deg, #11181c 0%, #006fee 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .hero-subtitle {
-            font-size: 1.2rem;
-            color: var(--zd-secondary);
-            margin: 0 auto 3rem;
-            max-width: 700px;
-            line-height: 1.6;
-        }
-
-        /* Centered Hero Image */
-        .hero-image-container {
-            position: relative;
-            max-width: 800px;
-            margin: 0 auto 1.2rem;
-        }
-
-        .hero-image {
-            width: 100%;
-            border-radius: 20px;
-            box-shadow: 0 40px 80px rgba(0, 0, 0, 0.1);
-            border: 1px solid rgba(0, 0, 0, 0.05);
-        }
-
-        /* Buttons */
-        .btn-premium {
-            padding: 0.6rem 1rem;
-            border-radius: 50px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            font-size: 1rem;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .btn-primary-zd {
-            background-color: var(--zd-primary);
-            color: white;
-            border: none;
-            box-shadow: 0 10px 20px rgba(0, 111, 238, 0.2);
-        }
-
-        .btn-primary-zd:hover {
-            transform: translateY(-3px);
-            background-color: var(--zd-accent);
-            color: white;
-            box-shadow: 0 15px 25px rgba(0, 111, 238, 0.3);
-        }
-
-        .btn-outline-zd {
-            border: 2px solid var(--zd-primary);
-            color: var(--zd-primary);
-            background: transparent;
-        }
-
-        .btn-outline-zd:hover {
-            background: rgba(0, 111, 238, 0.05);
-            color: var(--zd-primary);
-            transform: translateY(-3px);
-        }
-
-        .button-group {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
+    <link href="assets/styles/landing.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -116,10 +35,10 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <h1 class="hero-title">ZepDash - Modern Admin Dashboard</h1>
+                    <h1 class="hero-title">Free Bootstrap 5 Admin Dashboard</h1>
                     <p class="hero-subtitle">
-                        A high-performance admin template built with Bootstrap 5.
-                        The perfect solution for your CRM, E-commerce, and Analytics systems.
+                        Experience the perfect blend of elegance and performance. ZepDash is a premium, fully responsive
+                        admin template crafted to elevate both your personal and commercial projects to the next level.
                     </p>
                 </div>
             </div>
@@ -135,8 +54,9 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div class="button-group">
-                        <a href="demo/dashboard-analytics.html" class="btn btn-premium btn-primary-zd">Demo</a>
-                        <a href="docs/index.html" class="btn btn-premium btn-outline-zd">Documentation</a>
+                        <a href="demo/index.html" class="btn btn-premium btn-primary-zd">View Live
+                            Demo</a>
+                        <a href="docs/index.html" class="btn btn-premium btn-outline-zd">Read Documentation</a>
                     </div>
                 </div>
             </div>
