--- a/demo/dashboard-ecommerce.html
+++ b/demo/dashboard-ecommerce.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,11 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Ecommerce Dashboard - zepdash-admin</title>
 
-    <!-- Meta SEO -->
-    <meta name="description" content="zepdash-admin Ecommerce Dashboard" />
-    <meta name="author" content="sepsu-dev" />
+    <title>ZepDash - Ecommerce Dashboard</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
@@ -40,91 +37,102 @@
         <nav class="zd-topnav navbar navbar-expand navbar-light">
             <div class="navbar-brand ps-3 d-flex align-items-center">
                 <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
-                <span class="ms-2 fw-semibold">zepdash-admin</span>
+                <span class="ms-2 fw-semibold">ZepDash</span>
             </div>
-      <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
-        <i class="ph-bold ph-sidebar-simple"></i>
-      </button>
+            <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
+                <i class="ph-bold ph-sidebar-simple"></i>
+            </button>
 
-      <ul class="navbar-nav ms-auto align-items-center">
-        <!-- Notifications -->
-        <li class="nav-item dropdown me-2">
-          <a class="nav-link nav-icon" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="ph-bold ph-bell"></i>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger border border-light" style="font-size: 0.65rem; padding: 0.35em 0.5em; margin-top: 10px; margin-left: -8px;">
-              3
-            </span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 notifications-dropdown" aria-labelledby="notifDropdown">
-            <li class="p-3 border-bottom d-flex justify-content-between align-items-center">
-              <h6 class="mb-0 fw-bold">Notifications</h6>
-              <span class="badge bg-primary-subtle text-primary extra-small">3 New</span>
-            </li>
-            <div data-simplebar style="max-height: 300px;">
-              <a href="#" class="notification-item">
-                <div class="notification-icon bg-primary-subtle text-primary">
-                  <i class="ph-bold ph-user-plus"></i>
-                </div>
-                <div>
-                  <p class="mb-1 small fw-bold">New user registered</p>
-                  <p class="mb-0 extra-small text-muted">A few seconds ago</p>
-                </div>
-              </a>
-              <a href="#" class="notification-item">
-                <div class="notification-icon bg-success-subtle text-success">
-                  <i class="ph-bold ph-shopping-cart"></i>
-                </div>
-                <div>
-                  <p class="mb-1 small fw-bold">New order received</p>
-                  <p class="mb-0 extra-small text-muted">2 minutes ago</p>
-                </div>
-              </a>
-              <a href="#" class="notification-item">
-                <div class="notification-icon bg-warning-subtle text-warning">
-                  <i class="ph-bold ph-warning"></i>
-                </div>
-                <div>
-                  <p class="mb-1 small fw-bold">Server threshold alert</p>
-                  <p class="mb-0 extra-small text-muted">1 hour ago</p>
-                </div>
-              </a>
-            </div>
-            <li class="p-2 text-center border-top">
-              <a href="#" class="text-primary extra-small fw-bold text-decoration-none">View all notifications</a>
-            </li>
-          </ul>
-        </li>
+            <ul class="navbar-nav ms-auto align-items-center">
+                <!-- Notifications -->
+                <li class="nav-item dropdown me-2">
+                    <a class="nav-link nav-icon" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <i class="ph-bold ph-bell"></i>
+                        <span
+                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger border border-light"
+                            style="font-size: 0.65rem; padding: 0.35em 0.5em; margin-top: 10px; margin-left: -8px;">
+                            3
+                        </span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 notifications-dropdown"
+                        aria-labelledby="notifDropdown">
+                        <li class="p-3 border-bottom d-flex justify-content-between align-items-center">
+                            <h6 class="mb-0 fw-bold">Notifications</h6>
+                            <span class="badge bg-primary-subtle text-primary extra-small">3 New</span>
+                        </li>
+                        <div data-simplebar style="max-height: 300px;">
+                            <a href="#" class="notification-item">
+                                <div class="notification-icon bg-primary-subtle text-primary">
+                                    <i class="ph-bold ph-user-plus"></i>
+                                </div>
+                                <div>
+                                    <p class="mb-1 small fw-bold">New user registered</p>
+                                    <p class="mb-0 extra-small text-muted">A few seconds ago</p>
+                                </div>
+                            </a>
+                            <a href="#" class="notification-item">
+                                <div class="notification-icon bg-success-subtle text-success">
+                                    <i class="ph-bold ph-shopping-cart"></i>
+                                </div>
+                                <div>
+                                    <p class="mb-1 small fw-bold">New order received</p>
+                                    <p class="mb-0 extra-small text-muted">2 minutes ago</p>
+                                </div>
+                            </a>
+                            <a href="#" class="notification-item">
+                                <div class="notification-icon bg-warning-subtle text-warning">
+                                    <i class="ph-bold ph-warning"></i>
+                                </div>
+                                <div>
+                                    <p class="mb-1 small fw-bold">Server threshold alert</p>
+                                    <p class="mb-0 extra-small text-muted">1 hour ago</p>
+                                </div>
+                            </a>
+                        </div>
+                        <li class="p-2 text-center border-top">
+                            <a href="#" class="text-primary extra-small fw-bold text-decoration-none">View all
+                                notifications</a>
+                        </li>
+                    </ul>
+                </li>
 
-        <!-- User Profile -->
-        <li class="nav-item dropdown ms-1">
-          <a class="nav-link p-0" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border" style="width: 38px; height: 38px; object-fit: cover;" />
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 overflow-hidden" aria-labelledby="navbarDropdown" style="min-width: 240px;">
-            <li class="p-3 bg-light">
-              <div class="d-flex align-items-center">
-                <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border" style="width: 48px; height: 48px; object-fit: cover;" />
-                <div class="ms-3">
-                  <h6 class="mb-0 fw-bold">Valerie Luna</h6>
-                  <p class="mb-0 text-muted extra-small">vluna@aol.com</p>
-                </div>
-              </div>
-            </li>
-            <li><hr class="dropdown-divider m-0 opacity-10"></li>
-            <li>
-                <a class="dropdown-item d-flex align-items-center" href="profile.html">
-                    <i class="ph-bold ph-gear me-3 text-muted"></i> Account
-                </a>
-            </li>
-            <li>
-                <a class="dropdown-item d-flex align-items-center text-danger" href="login.html">
-                    <i class="ph-bold ph-sign-out me-3"></i> Logout
-                </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-</nav>
+                <!-- User Profile -->
+                <li class="nav-item dropdown ms-1">
+                    <a class="nav-link p-0" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border"
+                            style="width: 38px; height: 38px; object-fit: cover;" />
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 overflow-hidden"
+                        aria-labelledby="navbarDropdown" style="min-width: 240px;">
+                        <li class="p-3 bg-light">
+                            <div class="d-flex align-items-center">
+                                <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border"
+                                    style="width: 48px; height: 48px; object-fit: cover;" />
+                                <div class="ms-3">
+                                    <h6 class="mb-0 fw-bold">Sepsu Didieu</h6>
+                                    <p class="mb-0 text-muted extra-small">sepsu@zepdash.com</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider m-0 opacity-10">
+                        </li>
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center" href="profile.html">
+                                <i class="ph-bold ph-gear me-3 text-muted"></i> Account
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item d-flex align-items-center text-danger" href="login.html">
+                                <i class="ph-bold ph-sign-out me-3"></i> Logout
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <div id="layoutSidenav">
@@ -142,11 +150,11 @@
                         </a>
                         <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                                <a class="nav-link" href="dashboard-analytics.html">Analytics</a>
+                                <a class="nav-link" href="index.html">Analytics</a>
                                 <a class="nav-link" href="dashboard-crm.html">CRM</a>
                                 <a class="nav-link active" href="dashboard-ecommerce.html">Ecommerce</a>
-                                          </nav>
-            </div>
+                            </nav>
+                        </div>
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#componentsCollapse">
@@ -166,8 +174,8 @@
                                 <a class="nav-link" href="progress.html">Progress</a>
                                 <a class="nav-link" href="toasts.html">Toasts</a>
                                 <a class="nav-link" href="spinners.html">Spinners</a>
-                                          </nav>
-            </div>
+                            </nav>
+                        </div>
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#formsCollapse">
@@ -183,8 +191,8 @@
                                 <a class="nav-link" href="forms-checks.html">Checkboxes & Radios</a>
                                 <a class="nav-link" href="forms-layout.html">Form Layout</a>
                                 <a class="nav-link" href="forms-validation.html">Validation</a>
-                                          </nav>
-            </div>
+                            </nav>
+                        </div>
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#tablesCollapse">
@@ -197,8 +205,8 @@
                             <nav class="zd-sidenav-menu-nested nav">
                                 <a class="nav-link" href="tables-basic.html">Basic Table</a>
                                 <a class="nav-link" href="tables-datatables.html">DataTables</a>
-                                          </nav>
-            </div>
+                            </nav>
+                        </div>
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#pagesCollapse">
@@ -209,17 +217,17 @@
 
                         <div class="collapse" id="pagesCollapse" data-bs-parent="#sidenavAccordion">
                             <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link" href="profile.html">Profile</a>
-                <a class="nav-link" href="change-password.html">Change Password</a>
-                <a class="nav-link" href="login.html">Login</a>
-                <a class="nav-link" href="register.html">Register</a>
-                <a class="nav-link" href="forgot-password.html">Forgot Password</a>
-                <a class="nav-link" href="starter.html">Starter Page</a>
-                <a class="nav-link" href="blank.html">Blank Page</a>
-                <a class="nav-link" href="404.html">404 Error</a>
-                <a class="nav-link" href="500.html">500 Error</a>
-              </nav>
-            </div>
+                                <a class="nav-link" href="profile.html">Profile</a>
+                                <a class="nav-link" href="change-password.html">Change Password</a>
+                                <a class="nav-link" href="login.html">Login</a>
+                                <a class="nav-link" href="register.html">Register</a>
+                                <a class="nav-link" href="forgot-password.html">Forgot Password</a>
+                                <a class="nav-link" href="starter.html">Starter Page</a>
+                                <a class="nav-link" href="blank.html">Blank Page</a>
+                                <a class="nav-link" href="404.html">404 Error</a>
+                                <a class="nav-link" href="500.html">500 Error</a>
+                            </nav>
+                        </div>
 
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#utilitiesCollapse">
@@ -233,15 +241,15 @@
                                 <a class="nav-link" href="colors.html">Colors</a>
                                 <a class="nav-link" href="typography.html">Typography</a>
                                 <a class="nav-link" href="icons.html">Icons</a>
-                                          </nav>
-            </div>
+                            </nav>
+                        </div>
 
                     </div>
                 </div>
 
                 <footer class="zd-sidenav-footer">
                     <small>Logged in as:</small>
-                    <div>admin</div>
+                    <div>Sepsu Didieu</div>
                 </footer>
             </nav>
         </aside>
@@ -455,3 +463,6 @@
 </body>
 
 </html>
+
+
+
