--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,21 +6,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Analytics Dash - zepdash-admin</title>
 
   <!-- Meta SEO -->
-  <meta name="description" content="zepdash-admin is a modern Bootstrap-based admin dashboard" />
-  <meta name="keywords" content="zepdash-admin, admin dashboard, bootstrap, webapp" />
-  <meta name="author" content="sepsu-dev" />
+  <meta name="description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta name="keywords" content="zepdash, admin dashboard, bootstrap 5, ui kit, webapp" />
+  <meta name="author" content="ZepDash" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://zepdash-admin.vercel.app/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="zepdash-admin - Modern Admin Dashboard" />
-  <meta property="og:description" content="A Bootstrap-based admin dashboard" />
-  <meta property="og:image" content="https://zepdash-admin.vercel.app/assets/images/logo.png" />
-  <meta property="og:url" content="https://zepdash-admin.vercel.app/" />
+  <meta property="og:title" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
+  <meta property="og:description" content="ZepDash - Free Bootstrap 5 Admin Dashboard" />
   <meta property="og:type" content="website" />
+  <title>ZepDash - Analytics Dashboard</title>
+
+
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
@@ -50,7 +50,7 @@
     <nav class="zd-topnav navbar navbar-expand navbar-light">
       <div class="navbar-brand ps-3 d-flex align-items-center">
         <img src="../assets/images/logo.png" alt="logo" class="logo-navbar" />
-        <span class="ms-2 fw-semibold">zepdash-admin</span>
+        <span class="ms-2 fw-semibold">ZepDash</span>
       </div>
       <button class="btn btn-light" id="sidebarToggle" aria-label="Toggle sidebar">
         <i class="ph-bold ph-sidebar-simple"></i>
@@ -59,13 +59,17 @@
       <ul class="navbar-nav ms-auto align-items-center">
         <!-- Notifications -->
         <li class="nav-item dropdown me-2">
-          <a class="nav-link nav-icon" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link nav-icon" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             <i class="ph-bold ph-bell"></i>
-            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger border border-light" style="font-size: 0.65rem; padding: 0.35em 0.5em; margin-top: 10px; margin-left: -8px;">
+            <span
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger border border-light"
+              style="font-size: 0.65rem; padding: 0.35em 0.5em; margin-top: 10px; margin-left: -8px;">
               3
             </span>
           </a>
-          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 notifications-dropdown" aria-labelledby="notifDropdown">
+          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 notifications-dropdown"
+            aria-labelledby="notifDropdown">
             <li class="p-3 border-bottom d-flex justify-content-between align-items-center">
               <h6 class="mb-0 fw-bold">Notifications</h6>
               <span class="badge bg-primary-subtle text-primary extra-small">3 New</span>
@@ -107,34 +111,40 @@
 
         <!-- User Profile -->
         <li class="nav-item dropdown ms-1">
-          <a class="nav-link p-0" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border" style="width: 38px; height: 38px; object-fit: cover;" />
+          <a class="nav-link p-0" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border"
+              style="width: 38px; height: 38px; object-fit: cover;" />
           </a>
-          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 overflow-hidden" aria-labelledby="navbarDropdown" style="min-width: 240px;">
+          <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 overflow-hidden"
+            aria-labelledby="navbarDropdown" style="min-width: 240px;">
             <li class="p-3 bg-light">
               <div class="d-flex align-items-center">
-                <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border" style="width: 48px; height: 48px; object-fit: cover;" />
+                <img src="../assets/images/user-avatar.png" alt="user" class="rounded-circle border"
+                  style="width: 48px; height: 48px; object-fit: cover;" />
                 <div class="ms-3">
-                  <h6 class="mb-0 fw-bold">Valerie Luna</h6>
-                  <p class="mb-0 text-muted extra-small">vluna@aol.com</p>
+                  <h6 class="mb-0 fw-bold">Sepsu Didieu</h6>
+                  <p class="mb-0 text-muted extra-small">sepsu@zepdash.com</p>
                 </div>
               </div>
             </li>
-            <li><hr class="dropdown-divider m-0 opacity-10"></li>
             <li>
-                <a class="dropdown-item d-flex align-items-center" href="profile.html">
-                    <i class="ph-bold ph-gear me-3 text-muted"></i> Account
-                </a>
+              <hr class="dropdown-divider m-0 opacity-10">
             </li>
             <li>
-                <a class="dropdown-item d-flex align-items-center text-danger" href="login.html">
-                    <i class="ph-bold ph-sign-out me-3"></i> Logout
-                </a>
+              <a class="dropdown-item d-flex align-items-center" href="profile.html">
+                <i class="ph-bold ph-gear me-3 text-muted"></i> Account
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item d-flex align-items-center text-danger" href="login.html">
+                <i class="ph-bold ph-sign-out me-3"></i> Logout
+              </a>
             </li>
           </ul>
         </li>
       </ul>
-</nav>
+    </nav>
   </header>
 
   <div id="layoutSidenav">
@@ -152,7 +162,7 @@
             </a>
             <div class="collapse show" id="dashboardCollapse" data-bs-parent="#sidenavAccordion">
               <nav class="zd-sidenav-menu-nested nav">
-                <a class="nav-link active" href="dashboard-analytics.html">Analytics</a>
+                <a class="nav-link active" href="index.html">Analytics</a>
                 <a class="nav-link " href="dashboard-crm.html">CRM</a>
                 <a class="nav-link " href="dashboard-ecommerce.html">Ecommerce</a>
               </nav>
@@ -246,7 +256,7 @@
 
         <footer class="zd-sidenav-footer">
           <small>Logged in as:</small>
-          <div>admin</div>
+          <div>Sepsu Didieu</div>
         </footer>
       </nav>
     </aside>
@@ -451,3 +461,6 @@
 </body>
 
 </html>
+
+
+
